tests/error/tailList-wrong-argument.uplc
(program 0.0.0 [(force (builtin headList)) (con integer 1)])